--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,7 +36,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700,800i" rel="stylesheet">
-    <title>React App</title>
+    <title>Flightplan</title>
   </head>
   <body>
     <noscript>
